<resources>
    <string name="app_name">Fab</string>
    <string name="action_settings">Settings</string>
    <string name="ViewActivity">View Activity</string>
    <string name="view_dialog">View Dialog</string>
    <string name="Show_MainActivity">Show MainActivity</string>
    <string name="text_dialog">کد سوال... </string>
    <string name="new_question">ایجاد سوال جدید </string>
    <string name="ansver_question"> جواب دادن به سوال</string>
    <string name="result_callback">Result CallBack</string>
    <string name="tect_dialog">کد سوال را وارد کنید</string>
    <string name="btnCallBack">ورود به پاسخ دهی</string>
</resources>
