<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:id="@+id/layout_dialog"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".BaseActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"

        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        app:cardBackgroundColor="@color/with"
        app:cardCornerRadius="18dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/tect_dialog"
                android:textColor="#0091ea"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edt_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:lines="1"
                android:layout_marginLeft="20dp"
                android:hint="@string/text_dialog"
                android:inputType="number"
                />

            <Button
                android:id="@+id/btn_callback_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#0091ea"
                android:text="@string/btnCallBack" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>